--- a/sky_view/android/app/src/main/AndroidManifest.xml
+++ b/sky_view/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <application
         android:hardwareAccelerated="true"
         android:usesCleartextTraffic="true"
-        android:label="sky_view"
+        android:label="Sky View"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
